IKC-316 Mange topics (CRUD)